[gd_scene load_steps=11 format=3 uid="uid://cv1c73evbwc47"]

[ext_resource type="Texture2D" uid="uid://be1mmoh31yonf" path="res://pictures/hatter.png" id="1_dio32"]
[ext_resource type="Script" path="res://start.gd" id="2_kle00"]
[ext_resource type="Texture2D" uid="uid://blrjms3iv575j" path="res://pictures/Beállítás.png" id="3_ja44y"]
[ext_resource type="Texture2D" uid="uid://cw7ciqkht5dsw" path="res://pictures/Piros Beállítás.png" id="4_7qb8s"]
[ext_resource type="Texture2D" uid="uid://2vupprashv4o" path="res://pictures/Piros play.png" id="4_ms3k6"]
[ext_resource type="AudioStream" uid="uid://by2l0nx8uf6c3" path="res://zenék/loop.mp3" id="4_odhoa"]
[ext_resource type="Texture2D" uid="uid://7dok1uvm0kb2" path="res://pictures/play.png" id="5_chqlh"]
[ext_resource type="AudioStream" uid="uid://1v5x41gphjy3" path="res://zenék/kurzor.mp3" id="6_0e3wx"]
[ext_resource type="Texture2D" uid="uid://cebv4ryn7lksm" path="res://pictures/credits.png" id="6_g1akk"]
[ext_resource type="Texture2D" uid="uid://cnwygg6ft6oqq" path="res://pictures/piros credits.png" id="9_cdvk6"]

[node name="Menü" type="Node2D"]

[node name="Hatter" type="Sprite2D" parent="."]
position = Vector2(2, 2)
scale = Vector2(0.450852, 0.451646)
texture = ExtResource("1_dio32")
offset = Vector2(1276, 715)

[node name="háttérzene" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_odhoa")
autoplay = true
parameters/looping = true

[node name="Play" type="TextureButton" parent="."]
offset_left = 319.0
offset_top = 398.0
offset_right = 842.0
offset_bottom = 618.0
scale = Vector2(0.372, 0.4)
texture_normal = ExtResource("5_chqlh")
texture_pressed = ExtResource("4_ms3k6")
texture_hover = ExtResource("4_ms3k6")
texture_focused = ExtResource("4_ms3k6")
script = ExtResource("2_kle00")

[node name="kukac" type="AudioStreamPlayer2D" parent="Play"]
position = Vector2(-857.527, -995)
scale = Vector2(2.68817, 2.5)
stream = ExtResource("6_0e3wx")
volume_db = 4.0
script = ExtResource("2_kle00")

[node name="Beállítások" type="TextureButton" parent="."]
offset_left = 94.0
offset_top = 400.0
offset_right = 585.0
offset_bottom = 634.0
scale = Vector2(0.372, 0.372)
texture_normal = ExtResource("3_ja44y")
texture_pressed = ExtResource("4_7qb8s")
texture_hover = ExtResource("4_7qb8s")
script = ExtResource("2_kle00")

[node name="Credits" type="TextureButton" parent="."]
offset_left = 557.0
offset_top = 400.0
offset_right = 1081.0
offset_bottom = 616.0
scale = Vector2(0.372, 0.372)
texture_normal = ExtResource("6_g1akk")
texture_pressed = ExtResource("9_cdvk6")
texture_hover = ExtResource("9_cdvk6")
script = ExtResource("2_kle00")

[connection signal="ready" from="." to="Play" method="_on_menü_ready"]
[connection signal="mouse_entered" from="Play" to="Play" method="_on_mouse_entered"]
[connection signal="pressed" from="Play" to="Play" method="_on_pressed"]
[connection signal="pressed" from="Beállítások" to="Play" method="_on_beállítások_pressed"]
